Se avanza en la parte de los carteles y desbordamiento de texto. Falta los demás items

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <body>
             <div class="contenedor">
                 <div class="fondo">  
-                    <img src="Sanji.jpeg.png" alt="Descripción de la imagen">
+                    <img src="Sanji2.png" alt="Descripción de la imagen">
                 </div>
             <div class="Buscador">
                 <!--Despegable inicia aquí-->
@@ -33,9 +33,9 @@
                                    <!--Barra de búsqueda inicia aquí-->
                 <div class="barra-busqueda">
                     <input type="text" id="search-input" placeholder="Buscar...">
+                    <button type = "submit" class = "search-btn btn" id = "search-btn">
                     <i class="fa-solid fa-magnifying-glass"></i>
-
-
+                    </button>
                 </div>
                  <!--Barra de búsqueda acaba aquí-->
                 </div>
