--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="contenedor">
                 <audio id="welcomeAudio" src="SanjiSound.mp3" preload="auto"></audio>
 
-                <div class="fondo">  
+                <div class="fondo" id="fondoDiv">  
                     <img src="Sanji2.png" alt="Descripción de la imagen">
                 </div>
             <div class="Buscador">
@@ -112,6 +112,7 @@
                 </div>
         </div>
 
+        <img id="notFoundImage" src="error.jpg.png" alt="Not Found">
 
             
         </div>      
